chrome://ntp-tiles-internals: hide when incognito

Previously I just disabled the callbacks. In addition to that, send back
an empty configuration and site list, to make the page properly display
that everything is disabled and there are no sites in incognito.

Without this change, the "View JSON" button appears for popular sites,
but causes a crash because there's no PopularSites object.

BUG=682622,696471,681774

Review-Url: https://codereview.chromium.org/2721603002
Cr-Commit-Position: refs/heads/master@{#453220}

Former-commit-id: d6336797781587abf6c3fa648d034315714d1134