components/ntp_tiles/webui/resources/ntp_tiles_internals.js
@@ -6,8 +6,6 @@ cr.define('chrome.ntp_tiles_internals', function() {
   'use strict';
 
   var initialize = function() {
-    receiveSites({});
-
     $('submit-update').addEventListener('click', function(event) {
       event.preventDefault();
       chrome.send('update', [{
